2018-06-04 Stjepan Brkić <stjepanbrkicc@gmail.com>

	* Headers/AppKit/NSView.h: Add 'id _coreAnimationData' variable.
	The variable will point to another class instance that will
	contain data necessary data for future implementation of methods
	regarding CA layers.

2018-03-30 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocument.m (-revertToContentsOfURL:ofType:error:): Add
	override calls for deprecated methods.

2018-03-29  Graham Lee  <graham@iamleeg.com>

	* Source/NSWindowController.m: gsdoc

2018-03-11 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSSliderCell.h,
	* Source/NSSliderCell.m: Rewrite this class to store and access
	the value directly. This brings the behaviour closer to Apple's
	horrible implementation.

2018-02-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSegmentedCell.m (-startTrackingAt:inView:,
	-continueTracking:at:inView:): Add this methods to enable
	tracking for this class.
	Patch suggested by Josh Freeman <pikopixel@twilightedge.com>.

2018-02-27 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSTheme.h,
	* Source/GSThemeDrawing.m: Correct int/NSInteger mismatch detected
	by Josh Freeman <pikopixel@twilightedge.com>.

2018-02-25 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSKeyValueBinding.h,
	* Source/NSKeyValueBinding.m: Add helper function NSIsControllerMarker.

2018-02-09 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSDisplayServer.m: Store the current display server in a
	static variable and not in a thread variable.
	Idea by Yavor Doganov  <yavor@gnu.org>

2018-02-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSHorizontalTypesetter.m (-layoutLineNewParagraph:): Make
	sure nominal gets always set.

2018-02-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAlert.m (NSBeginAlertSheet): Move closing the sheet from
	here...
	* Source/NSApplication.m (-beginSheet:...:contextInfo:): ...to here.

2018-01-29 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/speech/GNUmakefile,